--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^3.4.4",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "swiper": "^6.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
